GitHub actions: Run tests with Xcode 12
Change-Id: I339f855629c0d7cebfb4481b5516d4bfc5b778d3
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -309,6 +309,12 @@ jobs:
       matrix:
         config:
         - {
+            name: 'Run macOS tests (Xcode 12.0)',
+            target: 'desktop',
+            toolchain: 'clang_64',
+            testProfile: 'xcode_12-macosx-x86_64',
+          }
+        - {
             name: 'Run macOS tests (Xcode 11.6)',
             target: 'desktop',
             toolchain: 'clang_64',
@@ -321,10 +327,10 @@ jobs:
             testProfile: 'xcode_10_3-macosx-x86_64',
           }
         - {
-            name: 'Run iOS tests (Xcode 11.6)',
+            name: 'Run iOS tests (Xcode 12.0)',
             target: 'ios',
             toolchain: 'ios',
-            testProfile: 'xcode_11_6-iphoneos-arm64',
+            testProfile: 'xcode_12-iphoneos-arm64',
           }
     steps:
     - uses: actions/checkout@v1
