cmake: Make build output & install locations configurable
So we can configure the right paths for direct inclusion in the Qt
Creator build.

Change-Id: Ie83eb402f0d9ce5f1ef32737921dc2ec8b43a315
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/src/libexec/qbs_processlauncher/CMakeLists.txt
+++ b/src/libexec/qbs_processlauncher/CMakeLists.txt
@@ -14,7 +14,7 @@ set(PROTOCOL_SOURCES
 list_transform_prepend(PROTOCOL_SOURCES ${PATH_TO_PROTOCOL_SOURCES}/)
 
 add_qbs_app(qbs_processlauncher
-    DESTINATION ${QBS_LIBEXEC_PATH}
+    DESTINATION ${QBS_LIBEXEC_INSTALL_DIR}
     DEPENDS Qt5::Core Qt5::Network
     INCLUDES ${PATH_TO_PROTOCOL_SOURCES}
     SOURCES ${SOURCES} ${PROTOCOL_SOURCES}
