--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
   focal-android-513:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.13.2-0
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.13.2-1
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
@@ -41,7 +41,7 @@ services:
   focal-android-514:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.14.0-0
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.14.0-1
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
@@ -51,12 +51,22 @@ services:
   focal-android-515:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.15.1-0
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.15.1-1
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
       args:
         QT_VERSION: 5.15.1
+
+  focal-android-600:
+    << : *linux
+    hostname: focal-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.0.0-0
+    build:
+      dockerfile: docker/focal/test-android.Dockerfile
+      context: .
+      args:
+        QT_VERSION: 6.0.0
 
   focal-baremetal:
     << : *linux
