GitHub actions: Add ios-simulator job
Change-Id: I818164b62bd75579771a5caf3a74be796e253c54
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -339,6 +339,12 @@ jobs:
             toolchain: 'ios',
             testProfile: 'xcode_12-iphoneos-arm64',
           }
+        - {
+            name: 'Run iOS-sim tests (Xcode 12.0)',
+            target: 'ios',
+            toolchain: 'ios',
+            testProfile: 'xcode_12-iphonesimulator-x86_64',
+          }
     steps:
     - uses: actions/checkout@v1
     - name: Download artifact
