GitHub actions: fix macOS build
Change-Id: Idc99e0546748f4eabd9bb0cc1bc8ce5a29758382
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -130,7 +130,7 @@ jobs:
     - name: Install required packages
       run: |
         brew install ccache p7zip
-        /usr/bin/python3 -m pip install --user beautifulsoup4 lxml
+        python3 -m pip install --user beautifulsoup4 lxml
     - name: Install Qt
       uses: ./.github/actions/download-qt
       with:
