Retire Travis CI
Migrate Windows docker job to GitHub actions and remove .travis.yml

Change-Id: I7f2ee5a6f27ded94a84550982c2c9fe404fe7475
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ x-default-service: &linux
     - QBS_TEST_SOURCE_ROOT
     - WITH_ARCHIVE
     - WITH_TESTS
+    - CLCACHE_DIR
   volumes:
     - .:/qbs
     - ~/.ccache:/home/devel/.ccache
