Fix that target was accessed before it was created
Amends c21932163779bcfe4577ac2e3326b8c113884829

Change-Id: I078df77ebfd7921c9c8bcaf131ae06a3a1fcd181
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -13,6 +13,7 @@ if (QBS_INSTALL_HTML_DOCS OR QBS_INSTALL_QCH_DOCS)
         set(_INSTALL_QCH_DOCS false)
     endif()
 
+    get_update_path_command(UPDATE_PATH_COMMAND)
     add_custom_target(
         BuildQbsDocumentation ALL
         COMMAND ${UPDATE_PATH_COMMAND}
