GitHub actions: Bump Xcode version to 12.2
Change-Id: I55e1bf2b00718d060871ed61033a20401f3a33c7
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -361,10 +361,10 @@ jobs:
       matrix:
         config:
         - {
-            name: 'Run macOS tests (Xcode 12.0)',
+            name: 'Run macOS tests (Xcode 12.2)',
             target: 'desktop',
             toolchain: 'clang_64',
-            testProfile: 'xcode_12-macosx-x86_64',
+            testProfile: 'xcode_12_2-macosx-x86_64',
           }
         - {
             name: 'Run macOS tests (Xcode 11.6)',
