cmake build: Fix dependencies of BuildQbsResources
It requires qbs_processlauncher to exist, otherwise

ERROR: Failed to start process launcher at
'<path_to_build>/qbs_processlauncher': execvp: No such file or directory

Change-Id: I1dc2760889f6f74b9371d89803ce3131a3494532
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -54,7 +54,7 @@ add_custom_target(
         -d ${PROJECT_BINARY_DIR}/
         config:resources-build
         -p "qbs resources"
-    DEPENDS qbs copy-runtime-files-qbs
+    DEPENDS qbs copy-runtime-files-qbs qbs_processlauncher
     )
 
 install(
