cmake: Doc should depend on qbs_processlauncher
Amends b946dd352114e70bee5203ea02bb7be11f8ab998.

Change-Id: I89b4fd32b1087f542678aab34a208e6c5eee9c12
Reviewed-by: Eike Ziller <eike.ziller@qt.io>

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -37,7 +37,7 @@ if (QBS_INSTALL_HTML_DOCS OR QBS_INSTALL_QCH_DOCS)
             -d ${PROJECT_BINARY_DIR}/
             config:doc-build
             -p "qbs documentation"
-        DEPENDS qbs copy-runtime-files-qbs
+        DEPENDS qbs copy-runtime-files-qbs qbs_processlauncher
       )
   install(
       DIRECTORY ${PROJECT_BINARY_DIR}/doc-build/install-root/share/doc/qbs/html/
