cmake: Pass python3 from CMake to Qbs
...to avoid fuss with possibly different Python versions found by CMake
and Qbs

Change-Id: I887f8aed8ed52b2766c0c1c411525b433b21458a
Reviewed-by: Eike Ziller <eike.ziller@qt.io>

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -58,6 +58,7 @@ if (QBS_INSTALL_HTML_DOCS OR QBS_INSTALL_QCH_DOCS)
                 project.withCode:false
                 project.withDocumentation:true
                 profile:none
+                "products.qbs documentation.pythonPath:${Python3_EXECUTABLE}"
                 modules.qbsbuildconfig.installHtml:${_INSTALL_HTML_DOCS}
                 modules.qbsbuildconfig.installQch:${_INSTALL_QCH_DOCS}
                 moduleProviders.Qt.qmakeFilePaths:${_QT_QMAKE_EXECUTABLE}
