Add qt4 docker image for basic testing
Change-Id: Ied6d9eac49fcb20de72499ab7c39e83a90a98b75
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -257,6 +257,13 @@ jobs:
             profile: '',
             script: './scripts/test-qt-for-android.sh',
           }
+        - {
+            name: 'Run Linux tests (Qt 4.8.7)',
+            image: 'focal-qt4',
+            profile: '',
+            script: './scripts/test-qt4.sh',
+          }
+
     env:
       QBS_TEST_SOURCE_ROOT: 'tests'
       QBS_AUTOTEST_PROFILE: ${{ matrix.config.profile }}
