cmake build: Turn project file updates on by default
Project file updates should be supported by any qbs binary,
since nowadays IDE integration is not tied to a special build of Qbs.

Task-number: QTCREATORBUG-25232
Change-Id: Ic2fe6b0ecdb77d84209ce16fdfe8158334a8bb29
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(CMAKE_AUTOUIC ON)
 
 option(WITH_TESTS "Build Tests" ON)
 option(WITH_UNIT_TESTS "Build Unit Tests" OFF)
-option(WITH_PROJECT_FILE_UPDATES "Enable project file updates support" OFF)
+option(WITH_PROJECT_FILE_UPDATES "Enable project file updates support" ON)
 option(INSTALL_PUBLIC_HEADERS "Whether to install public headers" ON)
 option(QBS_INSTALL_HTML_DOCS "Whether to install HTML Documentation" OFF)
 option(QBS_INSTALL_QCH_DOCS "Whether to install QCH Documentation" OFF)
