baremetal: Add XTENSA architecture for GCC compiler to CI
Change-Id: I810f6b6c263a1b5ade0ece35e57f6ad30b2864ed
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -299,6 +299,8 @@ jobs:
       run: QBS_AUTOTEST_PROFILE=avr-gcc-5_4 docker-compose run focal-baremetal scripts/test-baremetal.sh release/install-root/usr/local/bin
     - name: msp430-gcc-4_6
       run: QBS_AUTOTEST_PROFILE=msp430-gcc-4_6 docker-compose run focal-baremetal scripts/test-baremetal.sh release/install-root/usr/local/bin
+    - name: xtensa-lx106-elf-gcc-9_2
+      run: QBS_AUTOTEST_PROFILE=xtensa-lx106-elf-gcc-9_2 docker-compose run focal-baremetal scripts/test-baremetal.sh release/install-root/usr/local/bin
     - name: sdcc-3_8_0-mcs51
       run: QBS_AUTOTEST_PROFILE=sdcc-3_8_0-mcs51 docker-compose run focal-baremetal scripts/test-baremetal.sh release/install-root/usr/local/bin
     - name: sdcc-3_8_0-stm8
