--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
             options: 'modules.cpp.compilerWrapper:ccache
                       modules.qbs.debugInformation:true
                       modules.qbsbuildconfig.enableAddressSanitizer:false
+                      modules.qbsbuildconfig.enableProjectFileUpdates:false
                       modules.qbsbuildconfig.enableUnitTests:false
                       modules.qbsbuildconfig.enableBundledQt:true',
             script: './scripts/build-qbs-with-qbs.sh',
@@ -70,6 +71,7 @@ jobs:
         modules.cpp.compilerWrapper:ccache
         modules.qbs.debugInformation:true
         modules.qbsbuildconfig.enableUnitTests:false
+        modules.qbsbuildconfig.enableProjectFileUpdates:false
         modules.qbsbuildconfig.enableAddressSanitizer:false
         modules.qbsbuildconfig.enableBundledQt:true
       WITH_TESTS: 0
@@ -154,7 +156,7 @@ jobs:
         qbs.buildVariant:release
         modules.cpp.compilerWrapper:clcache
         modules.qbsbuildconfig.enableBundledQt:true
-        modules.qbsbuildconfig.enableProjectFileUpdates:true
+        modules.qbsbuildconfig.enableProjectFileUpdates:false
         modules.qbsbuildconfig.enableUnitTests:false
         modules.cpp.treatWarningsAsErrors:true
         project.withDocumentation:true
