GitHub actions: use empty qbs.installPrefix for release packages
Change-Id: Ifddbebe4b3126d9f705df860622abd44bf5e5b7b
Reviewed-by: Richard Weickelt <richard@weickelt.de>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,8 @@ jobs:
         config:
         - {
             name: 'Build on Linux (gcc)',
-            options: 'modules.cpp.compilerWrapper:ccache
+            options: 'qbs.installPrefix:""
+                      modules.cpp.compilerWrapper:ccache
                       modules.qbs.debugInformation:true
                       modules.qbsbuildconfig.enableAddressSanitizer:false
                       modules.qbsbuildconfig.enableProjectFileUpdates:false
@@ -68,6 +69,7 @@ jobs:
     timeout-minutes: 45
     env:
       BUILD_OPTIONS: |
+        qbs.installPrefix:""
         modules.cpp.compilerWrapper:ccache
         modules.qbs.debugInformation:true
         modules.qbsbuildconfig.enableUnitTests:false
