--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -240,6 +240,12 @@ jobs:
             script: './scripts/test-qbs.sh',
           }
         - {
+            name: 'Run Linux tests (gcc, Qt 6.0)',
+            image: 'focal-qt6',
+            profile: 'qt-gcc_64',
+            script: './scripts/test-qt.sh',
+          }
+        - {
             name: 'Run Android tests (Qt 5.13)',
             image: 'focal-android-513',
             profile: '',
@@ -335,33 +341,53 @@ jobs:
             target: 'desktop',
             toolchain: 'clang_64',
             testProfile: 'xcode_12_4-macosx-x86_64',
+            qtVersion: '5.15.2',
+            script: './scripts/test-qbs.sh',
+          }
+        - {
+            name: 'Run macOS tests (Xcode 12.4, Qt 6.0)',
+            target: 'desktop',
+            toolchain: 'clang_64',
+            testProfile: 'xcode_12_4-macosx-x86_64',
+            qtVersion: '6.0.2',
+            script: './scripts/test-qt.sh',
           }
         - {
             name: 'Run macOS tests (Xcode 11.6)',
             target: 'desktop',
             toolchain: 'clang_64',
             testProfile: 'xcode_11_6-macosx-x86_64',
+            qtVersion: '5.15.2',
+            script: './scripts/test-qbs.sh',
           }
         - {
             name: 'Run macOS tests (Xcode 10.3)',
             target: 'desktop',
             toolchain: 'clang_64',
             testProfile: 'xcode_10_3-macosx-x86_64',
+            qtVersion: '5.15.2',
+            script: './scripts/test-qbs.sh',
           }
         - {
             name: 'Run iOS tests (Xcode 12.0)',
             target: 'ios',
             toolchain: 'ios',
             testProfile: 'xcode_12-iphoneos-arm64',
+            qtVersion: '5.15.2',
+            script: './scripts/test-qbs.sh',
           }
         - {
             name: 'Run iOS-sim tests (Xcode 12.0)',
             target: 'ios',
             toolchain: 'ios',
             testProfile: 'xcode_12-iphonesimulator-x86_64',
+            qtVersion: '5.15.2',
+            script: './scripts/test-qbs.sh',
           }
     steps:
     - uses: actions/checkout@v1
+      with:
+        submodules: true
     - name: Download artifact
       uses: actions/download-artifact@v1
       with:
@@ -378,6 +404,7 @@ jobs:
       with:
         target: ${{ matrix.config.target }}
         toolchain: ${{ matrix.config.toolchain }}
+        version: ${{ matrix.config.qtVersion }}
     - name: Setup Qbs
       run: |
         qbs setup-toolchains --detect
@@ -389,7 +416,7 @@ jobs:
       run: |
         sudo chmod g+w /cores
         ulimit -c unlimited
-        ./scripts/test-qbs.sh ./release/install-root/usr/local/bin
+        ${{ matrix.config.script }} ./release/install-root/usr/local/bin
     - name: Coredump on failure
       if: ${{ failure() }}
       run: |
@@ -411,12 +438,24 @@ jobs:
             target: 'desktop',
             toolchain: 'win64_msvc2019_64',
             testProfile: 'MSVC2019-x64',
+            qtVersion: '5.15.2',
+            script: './scripts/test-qbs.sh',
+          }
+        - {
+            name: 'Run Windows tests (MSVC 2019, Qt 6.0.2)',
+            target: 'desktop',
+            toolchain: 'win64_msvc2019_64',
+            testProfile: 'MSVC2019-x64',
+            qtVersion: '6.0.2',
+            script: './scripts/test-qt.sh',
           }
         - {
             name: 'Run Windows tests (clang-cl)',
             target: 'desktop',
             toolchain: 'win64_msvc2019_64',
             testProfile: 'clang-cl-x86_64',
+            qtVersion: '5.15.2',
+            script: './scripts/test-qbs.sh',
           }
     env:
       QTEST_FUNCTION_TIMEOUT: 9000000
@@ -444,6 +483,7 @@ jobs:
       uses: ./.github/actions/download-qt
       with:
         toolchain: ${{ matrix.config.toolchain }}
+        version: ${{ matrix.config.qtVersion }}
     - name: Setup Qbs
       run: |
         qbs setup-toolchains --detect
@@ -453,5 +493,5 @@ jobs:
         qbs config --list
       shell: bash
     - name: Run Tests
-      run: ./scripts/test-qbs.sh ./release/install-root/bin
+      run: ${{ matrix.config.script }} ./release/install-root/bin
       shell: bash
