GitHub actions: fix setting up Qt on macOS
Previously, this step was meaningless since we use the "qt" profile, but
the one created via --detect is named qt-5-15-2. This does not affect
tests since qmake is in PATH and is found via auto-detection.

Change-Id: Ice027588bd8eaabf4eb715b0bf9b7c8087cefe3b
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -381,7 +381,7 @@ jobs:
     - name: Setup Qbs
       run: |
         qbs setup-toolchains --detect
-        qbs setup-qt --detect
+        qbs setup-qt $(which qmake) qt
         qbs config profiles.qt.baseProfile ${{ matrix.config.testProfile }}
         qbs config defaultProfile qt
         qbs config --list
