cmake: rename QbsAPI to QbsBuildConfig
The API name is misleading and can make users think this is for building
against Qbs.

Change-Id: I8d6553cde873389d0674ee779292af59f7d04c32
Reviewed-by: Eike Ziller <eike.ziller@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.10)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 include(FeatureSummary)
-include(QbsAPI)
+include(QbsBuildConfig)
 
 file(STRINGS VERSION QBS_VERSION)
 project(Qbs VERSION ${QBS_VERSION})
