Remove QTextCursor API from ChangeSet
It appears that neither Qbs not QtCreator use that API.

Also, remove QtGui dependency in corelib and enable project files
updates by default.

Change-Id: I2eb90d0a7bc74bca4f1007eb63164111f52adb1b
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@gmx.de>
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -422,7 +422,7 @@ add_qbs_library(qbscore
     PUBLIC_DEFINES
         ${QBS_PROJECT_FILE_UPDATES_DEFINES}
     DEPENDS
-        Qt5::CorePrivate Qt5::Gui Qt5::Network Qt5::Script Qt5::Xml ${EXTERNAL_DEPENDS}
+        Qt5::CorePrivate Qt5::Network Qt5::Script Qt5::Xml ${EXTERNAL_DEPENDS}
     PUBLIC_DEPENDS
         Qt5::Core
     INCLUDES
