cmake build: Fix project files updates in Qbs binary
Session class is located in the binary itself, not in the corelib, so we
need to pass this macro there as well. Do that by making this macro
"public" as Qbs build does.

Task-number: QTCREATORBUG-25232
Change-Id: I50b2f8a533db82cf28fd5d29c17fcfdc410c5ab2
Reviewed-by: Eike Ziller <eike.ziller@qt.io>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -419,6 +419,7 @@ add_qbs_library(qbscore
         "QBS_RELATIVE_LIBEXEC_PATH=\"${QBS_RELATIVE_LIBEXEC_PATH}\""
         "QBS_LIBRARY"
         ${QBS_UNIT_TESTS_DEFINES}
+    PUBLIC_DEFINES
         ${QBS_PROJECT_FILE_UPDATES_DEFINES}
     DEPENDS
         Qt5::CorePrivate Qt5::Gui Qt5::Network Qt5::Script Qt5::Xml ${EXTERNAL_DEPENDS}
