--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,6 +79,16 @@ jobs:
             options: 'CONFIG+=ccache',
             cacheid: 'qmake',
           }
+        - {
+            name: 'Build on Linux (gcc, Qt 6)',
+            image: 'focal-qt6',
+            script: './scripts/build-qbs-with-qbs.sh',
+            options: 'modules.cpp.compilerWrapper:ccache
+                      modules.qbsbuildconfig.enableAddressSanitizer:false
+                      modules.qbs.debugInformation:true
+                      modules.qbsbuildconfig.enableBundledQt:true',
+            cacheid: 'gcc-qt6',
+          }
     env:
       BUILD_OPTIONS: ${{ matrix.config.options }}
       QTEST_FUNCTION_TIMEOUT: 9000000
