Add android testing with different ndk versions
New docker images are added to test different android ndks. Those
images don't have Qt so only a subset of the tests are run.
So far I added 3 images: r23 (LTS), r21e (LTS) and r19c
(minimum one).

The other android images also have a new ANDROID_NDK_VERSION
argument set to the r23.

Change-Id: Iaa7c80b9cac1c7888b3297fac13333d22a9ad0bc
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -353,6 +353,24 @@ jobs:
             script: './scripts/test-qt-for-android.sh',
           }
         - {
+            name: 'Run Android tests (ndk r19c)',
+            image: 'focal-android-ndk-r19c',
+            profile: '',
+            script: './scripts/test-for-android.sh',
+          }
+        - {
+            name: 'Run Android tests (ndk r21e)',
+            image: 'focal-android-ndk-r21e',
+            profile: '',
+            script: './scripts/test-for-android.sh',
+          }
+        - {
+            name: 'Run Android tests (ndk r23)',
+            image: 'focal-android-ndk-r23',
+            profile: '',
+            script: './scripts/test-for-android.sh',
+          }
+        - {
             name: 'Run Linux tests (Qt 4.8.7)',
             image: 'focal-qt4',
             profile: '',
