--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,42 +43,76 @@ services:
   focal-android-513:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.13.2-2
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.13.2-3
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
       args:
         QT_VERSION: 5.13.2
+        ANDROID_NDK_VERSION: 23.0.7599858
 
   focal-android-514:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.14.0-2
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.14.0-3
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
       args:
         QT_VERSION: 5.14.0
+        ANDROID_NDK_VERSION: 23.0.7599858
 
   focal-android-515:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.15.1-2
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-5.15.1-3
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
       args:
         QT_VERSION: 5.15.1
+        ANDROID_NDK_VERSION: 23.0.7599858
 
   focal-android-600:
     << : *linux
     hostname: focal-android
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.0.0-2
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-6.0.0-3
     build:
       dockerfile: docker/focal/test-android.Dockerfile
       context: .
       args:
         QT_VERSION: 6.0.0
+        ANDROID_NDK_VERSION: 23.0.7599858
+
+  focal-android-ndk-r19c:
+    << : *linux
+    hostname: focal-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-ndk-r19c-0
+    build:
+      dockerfile: docker/focal/test-android-no-qt.Dockerfile
+      context: .
+      args:
+       ANDROID_NDK_VERSION: 19.2.5345600
+
+  focal-android-ndk-r21e:
+    << : *linux
+    hostname: focal-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-ndk-r21e-0
+    build:
+      dockerfile: docker/focal/test-android-no-qt.Dockerfile
+      context: .
+      args:
+        ANDROID_NDK_VERSION: 21.4.7075529
+
+  focal-android-ndk-r23:
+    << : *linux
+    hostname: focal-android
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:focal-android-ndk-r23-0
+    build:
+      dockerfile: docker/focal/test-android-no-qt.Dockerfile
+      context: .
+      args:
+        ANDROID_NDK_VERSION: 23.0.7599858
 
   focal-baremetal:
     << : *linux
