Android: Correct qt6 test
Change-Id: I1f05ae51f30f0158cb3dec6ce189d96f52987c7a
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -264,6 +264,12 @@ jobs:
             script: './scripts/test-qt-for-android.sh',
           }
         - {
+            name: 'Run Android tests (Qt 6.0.0)',
+            image: 'focal-android-600',
+            profile: '',
+            script: './scripts/test-qt-for-android.sh',
+          }
+        - {
             name: 'Run Linux tests (Qt 4.8.7)',
             image: 'focal-qt4',
             profile: '',
