Fix setting PATH on Windows when invoking Qbs
The original approach did not work when using
NMake or MinGW Makefiles (but worked with Ninja)

Change-Id: I1bfdb213b3007b100bb4cdcdbe4deb3935b6e266
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -46,8 +46,7 @@ if (QBS_INSTALL_HTML_DOCS OR QBS_INSTALL_QCH_DOCS)
             get_update_path_command(UPDATE_PATH_COMMAND)
             add_custom_target(
                 BuildQbsDocumentation ALL
-                COMMAND ${UPDATE_PATH_COMMAND}
-                COMMAND ${_QBS_OUTPUT_DIR}/qbs
+                COMMAND ${CMAKE_COMMAND} -E env "${UPDATE_PATH_COMMAND}" ${_QBS_OUTPUT_DIR}/qbs
                 resolve
                 --settings-dir ${PROJECT_BINARY_DIR}/settings
                 -f ${PROJECT_SOURCE_DIR}/qbs.qbs
@@ -62,7 +61,7 @@ if (QBS_INSTALL_HTML_DOCS OR QBS_INSTALL_QCH_DOCS)
                 modules.qbsbuildconfig.installHtml:${_INSTALL_HTML_DOCS}
                 modules.qbsbuildconfig.installQch:${_INSTALL_QCH_DOCS}
                 moduleProviders.Qt.qmakeFilePaths:${_QT_QMAKE_EXECUTABLE}
-                COMMAND ${_QBS_OUTPUT_DIR}/qbs
+                COMMAND ${CMAKE_COMMAND} -E env "${UPDATE_PATH_COMMAND}" ${_QBS_OUTPUT_DIR}/qbs
                 build
                 --settings-dir ${PROJECT_BINARY_DIR}/settings
                 -f ${PROJECT_SOURCE_DIR}/qbs.qbs
